saas-minikube-kubernetess/namespaces/lara-mara/laravel_deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: laravel
  namespace: lara-mara
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: ammar95/laravel-autoscaling:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
