saas-minikube-kubernetess/namespaces/lara-mara/laravel_service.yaml

apiVersion: v1
kind: Service
metadata:
  name: laravel
  namespace: lara-mara
spec:
  ports:
    - nodePort: 31423
      port: 80
  selector:
    app: laravel
  type: NodePort
